# Interactive-Tutorial-Builder

./: .gitignore  DEPLOY.md  PLAN.md  PRD.md  README.md  backend.sh  basic plan  frontend.sh  render.yaml  run.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  supabase_schema.sql
backend/eval-sets/assessment/: bad_examples.json  good_examples.json  rubric.json
backend/eval-sets/block_divider/: bad_examples.json  good_examples.json  rubric.json
backend/eval-sets/content/: bad_examples.json  good_examples.json  rubric.json
backend/eval-sets/final_quality/: bad_examples.json  good_examples.json  rubric.json
backend/eval-sets/mcq/: bad_examples.json  good_examples.json  rubric.json
backend/eval-sets/visual/: bad_examples.json  good_examples.json  rubric.json
backend/eval-sets/visual-decision/: animate_examples.json  bad_examples.json  good_examples.json  rubric.json  skip_examples.json
backend/prompts/: Block_division.md  MCQ_generator_prompt.md  MCQ_generator_prompt_v2.md
backend/reference_animations/: agile-model-animation.html  v-model-animation.html  waterfall-model-animation.html
backend/samples/: REFERENCE_OUTPUT.html  getting-started.html  sample_deck.pptx  software_development_models.html
backend/src/tutorial_builder/: __init__.py  cli.py  (+5 more)
backend/templates/: assessment_section.html.j2  base_tutorial.html.j2  block_section.html.j2  mcq_section.html.j2  tutorial_shell.html.j2
backend/tests/: conftest.py  test_assembler.py  test_graph_mock.py  test_html_parser.py  test_image_describer.py  test_mcq_parser.py  test_pptx_flow.py
(+95 files in other folders)
