[project]
name = "tutorial-builder"
version = "0.1.0"
description = "Agentic workflow that converts session content (HTML/PPTX) into interactive HTML tutorials"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "httpx>=0.27",
    "langgraph>=0.2.40",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-pptx>=0.6.23",
    "Pillow>=10.3",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
tutorial-builder = "tutorial_builder.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
